--- a/Gamoitsani/Source/Modules/Game/Game/Xib/GameViewController.xib
+++ b/Gamoitsani/Source/Modules/Game/Game/Xib/GameViewController.xib
@@ -25,15 +25,22 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="400" id="1tK-pM-LM6"/>
+                        <constraint firstAttribute="width" secondItem="DOp-si-W3S" secondAttribute="height" multiplier="1:1" id="Q5S-Gq-Hnd"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
+                            <exclude reference="Q5S-Gq-Hnd"/>
                             <exclude reference="1tK-pM-LM6"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
                         <mask key="constraints">
                             <include reference="1tK-pM-LM6"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=regular">
+                        <mask key="constraints">
+                            <include reference="Q5S-Gq-Hnd"/>
                         </mask>
                     </variation>
                 </view>
@@ -44,12 +51,14 @@
                 <constraint firstAttribute="bottom" secondItem="DOp-si-W3S" secondAttribute="bottom" constant="36" id="2Cb-6X-fuD"/>
                 <constraint firstItem="DOp-si-W3S" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="7Ay-7f-xyV"/>
                 <constraint firstItem="DOp-si-W3S" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="36" id="D7U-Q9-5ww"/>
+                <constraint firstItem="DOp-si-W3S" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="iTJ-Ze-Dsv"/>
                 <constraint firstItem="DOp-si-W3S" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="lIo-yc-pEW"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="DOp-si-W3S" secondAttribute="trailing" constant="36" id="seW-fd-Oj0"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="7Ay-7f-xyV"/>
+                    <exclude reference="iTJ-Ze-Dsv"/>
                     <exclude reference="2Cb-6X-fuD"/>
                     <exclude reference="lIo-yc-pEW"/>
                 </mask>
@@ -63,6 +72,11 @@
             <variation key="heightClass=regular-widthClass=compact">
                 <mask key="constraints">
                     <include reference="7Ay-7f-xyV"/>
+                </mask>
+            </variation>
+            <variation key="heightClass=regular-widthClass=regular">
+                <mask key="constraints">
+                    <include reference="iTJ-Ze-Dsv"/>
                 </mask>
             </variation>
             <point key="canvasLocation" x="-415" y="-10"/>
