--- a/Gamoitsani/Source/Modules/AddWord/Xib/AddWordViewController.xib
+++ b/Gamoitsani/Source/Modules/AddWord/Xib/AddWordViewController.xib
@@ -31,7 +31,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wGZ-bI-w9G" customClass="GMTextField" customModule="Gamoitsani" customModuleProvider="target">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wGZ-bI-w9G" customClass="GMTextField" customModule="Gamoitsani" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="44.333333333333329" width="361" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="SwJ-3t-VTS"/>
